@@ -1,3 +1,7 @@
+2007-08-26  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Patch from Steve Landers to enhance MacOSX support.
+
 2007-08-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Avoid mishandling chatstate (xep-0085) notification 
